# metropolis-sdg-smart-cities

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-3RD-PARTY  NOTICE  README.md  pyproject.toml
modules/augmentation/: .gitignore  pyproject.toml
modules/augmentation/configs/: config_carla.yaml
modules/augmentation/configs/prompts/: carla_template_generation_system_prompt.txt
modules/augmentation/modules/: cli.py
modules/augmentation/modules/cosmos_execution/: gradio.py
modules/augmentation/modules/prompt_generation/: core.py
modules/augmentation/modules/scene_captioning/: vlm.py
modules/augmentation/modules/template_generation/: llm.py
modules/augmentation/modules/utils/: common.py  prompt_loader.py
modules/augmentation/packman/: packman
modules/augmentation/packman/bootstrap/: configure.bat  install_package.py
modules/carla-ground-truth-generation/: .gitattributes  .gitignore  NOTICE  batch_processing.sh  frames_to_videos.py  main.py  process_multi_camera.sh  pyproject.toml  requirements.txt  som.py
modules/carla-ground-truth-generation/collisions_sdg/: README.md  sdg_collisions.py
modules/carla-ground-truth-generation/config/: collision.json
modules/carla-ground-truth-generation/config/harbor_road/: cam.yaml
modules/carla-ground-truth-generation/configs/: third_person_camera.yaml  wrong_way.json
modules/carla-ground-truth-generation/non_collisions_sdg/: sdg_non_collisions.py
modules/carla-ground-truth-generation/tools/: README.md  show_sensor.py
(+22 files in other folders)
